drupal-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: drupal
  labels:
    app: drupal
spec:
  ports:
    - port: 80
  selector:
    app: drupal
    tier: frontend
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drupal
  labels:
    app: drupal
spec:
  selector:
    matchLabels:
      app: drupal
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: drupal
        tier: frontend
    spec:
      containers:
      - image: drupal:latest
        name: drupal
        ports:
        - containerPort: 80
          name: moodle
        volumeMounts:
        - name: moodle-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: moodle-persistent-storage
        persistentVolumeClaim:
          claimName: d-pv-claim
