moodle-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: moodle
  labels:
    app: moodle
spec:
  ports:
    - port: 80
  selector:
    app: moodle
    tier: frontend
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moodle
  labels:
    app: moodle
spec:
  selector:
    matchLabels:
      app: moodle
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: moodle
        tier: frontend
    spec:
      containers:
      - image: bitnami/moodle:latest
        name: moodle
        ports:
        - containerPort: 80
          name: moodle
        volumeMounts:
        - name: moodle-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: moodle-persistent-storage
        persistentVolumeClaim:
          claimName: m-pv-claim
