ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gazebo-ingress
  annotations:
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gazebo
            port:
              number: 80
